compiler/testData/diagnostics/tests/typeParameters/deprecatedSyntax.kt
// RUN_PIPELINE_TILL: SOURCE
// FIR_IDENTICAL
fun foo<!DEPRECATED_TYPE_PARAMETER_SYNTAX!><T><!>() {
    fun bar<!DEPRECATED_TYPE_PARAMETER_SYNTAX!><T><!>() {}
}